--- a/SporpingBike/static/fagioli/messicani.html
+++ b/SporpingBike/static/fagioli/messicani.html
@@ -7,12 +7,11 @@
 		<title>Sporping Management</title>
 		<link rel="stylesheet" href="css/style.css?v=0.0.1" />
 		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<!-- Latest compiled and minified JavaScript -->
-		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script type='text/javascript' src='js/angular.min.js'></script>
-		<script type='text/javascript' src='js/ui-bootstrap-tpls-0.14.3.min.js'></script>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+		<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js'></script>
+		<script type='text/javascript' src='js/ui-bootstrap-tpls-1.3.2.min.js'></script>
 		<script type='text/javascript' src='js/appManagement.js?v=0.0.1'></script>
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
