--- a/SporpingBike/static/html/search_modal.html
+++ b/SporpingBike/static/html/search_modal.html
@@ -10,14 +10,25 @@
                 <input type="text" class="form-control" data-ng-model="search_item.Title"/>
             </div>
             <div class="form-group">
-                <label>Found date</label>
+                <label>Start date</label>
                 <input type="text" class="form-control" 
-                    uib-datepicker-popup='dd-MMMM-yyyy' ng-model="search_item.FoundDate" 
-                    is-open="isOpened"
+                    uib-datepicker-popup='dd-MMMM-yyyy' ng-model="search_item.StartDate" 
+                    is-open="isStartOpened"
                     datepicker-options="dateOptions"
                     close-text="Close" />
                 <span>
-                    <button type="button" class="btn btn-default" ng-click="openDatePopUp()"><i class="glyphicon glyphicon-calendar"></i></button>
+                    <button type="button" class="btn btn-default" ng-click="openStartDatePopUp()"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+            </div>
+            <div class="form-group">
+                <label>End date</label>
+                <input type="text" class="form-control" 
+                    uib-datepicker-popup='dd-MMMM-yyyy' ng-model="search_item.EndDate" 
+                    is-open="isEndOpened"
+                    datepicker-options="dateOptions"
+                    close-text="Close" />
+                <span>
+                    <button type="button" class="btn btn-default" ng-click="openEndDatePopUp()"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
             </div>
             <div class="form-group">
@@ -30,8 +41,20 @@
             <div data-ng-hide="resultLength > 0">
                 No item found.
             </div>
-            <div ng-repeat="item in searchedBikes">
-                <img data-ng-src="bike/{{item.fileName}}">
+            <div style="max-height:50%;">
+                <div ng-repeat="item in searchedBikes" style="text-align:center;">
+                    <hr style="width:80%;" />
+                    <div>
+                        <img data-ng-src="bike/{{item.fileName}}" 
+                             style="max-width:100%; max-height:100%;"
+                             data-ng-click="showOnMap($index)"
+                        >
+                    </div>
+                    <label>{{item.title}}</label>
+	                <p>by {{item.userName}}</p>
+	                <p>Found on:{{getDate(item.foundDate)}}</p>
+                </div>
+                <hr style="width:80%;" />
             </div>
         </uib-accordion-group>
     </uib-accordion>
