--- a/SporpingBike/static/html/index.html
+++ b/SporpingBike/static/html/index.html
@@ -53,7 +53,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li id="nav_home" class="active"><a href="#/" data-ng-click="changeMenu('nav_home')">Home<span class="sr-only">(current)</span></a></li>
-						<li id="nav_search"><a data-ng-click="search()">Sporping Search</a></li>
+						<li id="nav_search"><a href="javascript:void(0);" data-ng-click="search()">Search</a></li>
 						<li id="nav_add"><a data-ng-href="#/add">Add New Bike</a></li>
 						<li id="nav_about"><a data-ng-href="#/about">About Sporping</a></li>
 					</ul>
