--- a/SporpingBike/static/html/search_modal.html
+++ b/SporpingBike/static/html/search_modal.html
@@ -2,14 +2,13 @@
 	<label>Sporping search</label>
 </div>
 <div class="modal-body">
-    <uib-accordion close-others="false">
+    <uib-accordion close-others="oneAtATime">
         <uib-accordion-group heading="Search form" is-open="resultLength == 0">
-            <form name="search_form">
             <div class="form-group">
                 <label>Title</label>
                 <input type="text" class="form-control" data-ng-model="search_item.Title"/>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label>Start date</label>
                 <input type="text" class="form-control" 
                     uib-datepicker-popup='dd-MMMM-yyyy' ng-model="search_item.StartDate" 
@@ -30,12 +29,15 @@
                 <span>
                     <button type="button" class="btn btn-default" ng-click="openEndDatePopUp()"><i class="glyphicon glyphicon-calendar"></i></button>
                 </span>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label>Nickname</label>
                 <input type="text" class="form-control" data-ng-model="search_item.Nickname"/>
             </div>
-            </form>
+            <div class="form-group">
+                <button class="btn btn-primary" data-ng-click="search()">Search!</button>
+                <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
+            </div>
         </uib-accordion-group>
         <uib-accordion-group heading="Search Result" is-open="tabOpened">
             <div data-ng-hide="resultLength > 0">
@@ -58,8 +60,4 @@
             </div>
         </uib-accordion-group>
     </uib-accordion>
-</div>
-<div class="modal-footer">
-    <button class="btn btn-primary" data-ng-click="search()">Search!</button>
-    <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
 </div>
