--- a/SporpingBike/static/html/index.html
+++ b/SporpingBike/static/html/index.html
@@ -13,8 +13,9 @@
 		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js'></script>
 		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-mocks.js'></script>
 		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js'></script>
+		<script type='text/javascript' src='js/angular-touch.min.js'></script>	
 		<script type='text/javascript' src='js/ng-file-upload.min.js'></script>
-		<script type='text/javascript' src='js/ui-bootstrap-tpls-1.3.2.min.js'></script>
+		<script type='text/javascript' src='js/ui-bootstrap-tpls-0.14.3.min.js'></script>
 		
 		<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 		<script type='text/javascript' src="//cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
@@ -38,7 +39,6 @@
 	<body>
 		<header>
 			<nav class="navbar navbar-default navbar-static-top rounded" data-ng-controller="NavController">
-				<div class="container-fluid">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
