Angular touch support added.

--- a/SporpingBike/static/html/index.html
+++ b/SporpingBike/static/html/index.html
@@ -13,7 +13,7 @@
 		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js'></script>
 		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-mocks.js'></script>
 		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js'></script>
-		<script type='text/javascript' src='js/angular-touch.min.js'></script>	
+		<script type='text/javascript' src='//ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-touch.min.js'></script>	
 		<script type='text/javascript' src='js/ng-file-upload.min.js'></script>
 		<script type='text/javascript' src='js/ui-bootstrap-tpls-0.14.3.min.js'></script>
 		
