--- a/SporpingBike/static/html/main.html
+++ b/SporpingBike/static/html/main.html
@@ -15,9 +15,10 @@
 	</uib-carousel>
 	<div>
 		<h1>Sporping Location</h1>
-		<div>
+		<!--<div>
 			<a class="pointed" data-ng-click="geoLocateMe()">Geolocate me</a>
-		</div>
+		</div>-->
+		<geo-location-search></geo-location-search>
 		<div id="mapMain" class="rounded"></div>
 	</div>
 </div>
