--- a/SporpingBike/static/html/index.html
+++ b/SporpingBike/static/html/index.html
@@ -30,6 +30,7 @@
 		<script type='text/javascript' src='js/Controllers/MainController.js?v=0.0.2'></script>
 		<!--<script type='text/javasctipt' src='js/Controllers/SearchController.js?v=0.0.1'></script>-->
 		<script type='text/javascript' src='js/Controllers/AboutController.js?v=0.0.2'></script>
+		<script type='text/javascript' src='js/Directives/GeoLocationSearch.js'></script>
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
