--- a/SporpingBike/static/html/search_modal.html
+++ b/SporpingBike/static/html/search_modal.html
@@ -6,7 +6,7 @@
         <uib-accordion-group heading="Search form" is-open="isOpened">
             <div class="form-group">
                 <label>Title</label>
-                <input type="text" class="form-control" data-ng-model="search_item.Title"/>
+                <input type="text" data-ng-change="txtChanged()" class="form-control" data-ng-model="search_item.Title"/>
             </div>
             <!--<div class="form-group">
                 <label>Start date</label>
@@ -44,7 +44,7 @@
                 <p>No item found.</p>
             </div>
             <div data-ng-show="searchedBikes.length > 0">
-                <p>Item[s] found: {{searchedBikes.length}}</p>
+                <p>Item[s] found: {{paginationParams.totalItems}}</p>
             </div>
             <div style="max-height:50%;">
                 <div ng-repeat="item in searchedBikes" style="text-align:center;">
@@ -60,6 +60,13 @@
 	                <p>Found on:{{getDate(item.foundDate)}}</p>
                 </div>
                 <hr style="width:80%;" />
+            </div>
+            <div data-ng-show="searchedBikes.length">
+                <ul uib-pagination 
+                    total-items="paginationParams.totalItems"
+                    ng-model="paginationParams.currentPage"
+                    ng-change="pageChanged()"
+                    items-per-page="paginationParams.per_page"></ul>
             </div>
         </uib-accordion-group>
     </uib-accordion>
